--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
 
     <section class="portada-section">
+      <div class="nav-logo">
+          <img class="img-fluid logo" src="img/logo1.png" alt="">
+      </div>
       <div class="burger">
         <button onclick="showMenu()" type="button" class="btn btn-outline-dark"><i class="fas fa-bars"></i></button>
       </div>
@@ -30,27 +33,155 @@
             <div class="texto">
               <h1 data-aos="fade-up" data-aos-duration="2000">Unico <br>Norte</h1>
               <h2 data-aos="fade-up" data-aos-duration="2000">VISUAL ARTS</h2>
+              <button class="btn btn-outline-dark" type="button" name="button">DESCÚBRENOS</button>
             </div>
           </div>
         </div>
       </div>
       <div data-aos="flip-left" data-aos-duration="2000" class="flex">
-        <div class="logo-container">
+        <div class="logo-container levitate">
           <img class="img-fluid logo" src="img/logo1.png" alt="">
         </div>
       </div>
 
     </section>
-    <section class="contact-section">
+
+    <section class="we-section">
+      <div class="we-container">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col we-left">
+              <div class="encabezado">
+                <h2>Quiénes somos</h2>
+                <p>Descubre al equipo de la familia unico norte</p>
+                <hr>
+              </div>
+              <div class="we-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidi ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+            <div class="col we-right">
+              <img class="img-fluid" src="img/1.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col we-profile-container">
+              <div class="we-profile-card levitate">
+                <div class="we-profile-pic">
+                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
+                </div>
+                  <h3>Christian Roballos</h3>
+                  <h4>Fotografia/Post-production</h4>
+                <div class="row">
+                  <div class="col text-center">
+                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col we-profile-container">
+              <div class="we-profile-card levitate1">
+                <div class="we-profile-pic">
+                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
+                </div>
+                  <h3>Christian Roballos</h3>
+                  <h4>Fotografia/Post-production</h4>
+                <div class="row">
+                  <div class="col text-center">
+                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col we-profile-container">
+              <div class="we-profile-card levitate">
+                <div class="we-profile-pic">
+                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
+                </div>
+                  <h3>Christian Roballos</h3>
+                  <h4>Fotografia/Post-production</h4>
+                <div class="row">
+                  <div class="col text-center">
+                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col we-profile-container">
+              <div class="we-profile-card levitate1">
+                <div class="we-profile-pic">
+                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
+                </div>
+                  <h3>Christian Roballos</h3>
+                  <h4>Fotografia/Post-production</h4>
+                <div class="row">
+                  <div class="col text-center">
+                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col we-profile-container">
+              <div class="we-profile-card levitate">
+                <div class="we-profile-pic">
+                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
+                </div>
+                  <h3>Christian Roballos</h3>
+                  <h4>Fotografia/Post-production</h4>
+                <div class="row">
+                  <div class="col text-center">
+                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                  </div>
+                  <div class="col text-center">
+                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+
+
+        </div>
+      </div>
 
     </section>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script type="text/javascript" src="js/index.js">
-
     </script>
     <script>
      AOS.init();
@@ -60,4 +191,4 @@
 
 <!-- <video autoplay muted loop id="myVideo">
   <source src="img/videoback.mp4" type="video/mp4">
-</video> -->
+</video> -->                                                                                                                                                                                                                                                              
