--- a/index.html
+++ b/index.html
@@ -66,109 +66,217 @@
           </div>
         </div>
         <div class="container-fluid">
-          <div class="row">
-            <div class="col we-profile-container">
-              <div class="we-profile-card levitate">
-                <div class="we-profile-pic">
-                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
-                </div>
-                  <h3>Christian Roballos</h3>
-                  <h4>Fotografia/Post-production</h4>
-                <div class="row">
-                  <div class="col text-center">
-                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
+          <div class="we-profile-container">
+            <div class="encabezado">
+              <h2>Nuestro equipo</h2>
+              <hr>
             </div>
-            <div class="col we-profile-container">
-              <div class="we-profile-card levitate1">
-                <div class="we-profile-pic">
-                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
-                </div>
-                  <h3>Christian Roballos</h3>
-                  <h4>Fotografia/Post-production</h4>
-                <div class="row">
-                  <div class="col text-center">
-                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+            <div class="row">
+              <slider>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
                   </div>
-                  <div class="col text-center">
-                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                  <h2>Gabriela Oropeza</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
                   </div>
-                  <div class="col text-center">
-                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                </slide>
+
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
                   </div>
-                </div>
-              </div>
+                  <h2>Alessandro Varuzza</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Edson Sánchez</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+                <slide>
+                  <div class="we-profile-pic">
+                    <img src="img/cris.jpg" class="img-fluid" alt="">
+                  </div>
+                  <h2>Christian Roballos</h2>
+                  <h3>Fotógrafo</h3>
+                  <div class="row">
+                    <div class="col text_center">
+                      <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="col text_center">
+                      <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </slide>
+              </slider>
             </div>
-            <div class="col we-profile-container">
-              <div class="we-profile-card levitate">
-                <div class="we-profile-pic">
-                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
-                </div>
-                  <h3>Christian Roballos</h3>
-                  <h4>Fotografia/Post-production</h4>
-                <div class="row">
-                  <div class="col text-center">
-                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col we-profile-container">
-              <div class="we-profile-card levitate1">
-                <div class="we-profile-pic">
-                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
-                </div>
-                  <h3>Christian Roballos</h3>
-                  <h4>Fotografia/Post-production</h4>
-                <div class="row">
-                  <div class="col text-center">
-                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col we-profile-container">
-              <div class="we-profile-card levitate">
-                <div class="we-profile-pic">
-                  <img class="img-fluid logo" src="img/cris.jpg" alt="">
-                </div>
-                  <h3>Christian Roballos</h3>
-                  <h4>Fotografia/Post-production</h4>
-                <div class="row">
-                  <div class="col text-center">
-                    <a href="https://www.facebook.com/LaPizarraDelDT"><i class="fab fa-facebook"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://twitter.com/LaPizarraDelDT_"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="col text-center">
-                    <a href="https://www.instagram.com/lapizarradeldt/"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            
           </div>
+
 
 
         </div>
