--- a/index.html
+++ b/index.html
@@ -50,18 +50,19 @@
       <div class="we-container">
         <div class="container-fluid">
           <div class="row">
-            <div class="col we-left">
+            <div class="col-lg-6 col-xl-6 col-12 col-md-12 col-sm-12 we-left">
               <div class="encabezado">
                 <h2>Quiénes somos</h2>
                 <p>Descubre al equipo de la familia unico norte</p>
                 <hr>
               </div>
+              <img class="img-fluid display-responsive" src="img/1.jpg" alt="">
               <div class="we-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidi ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
             </div>
-            <div class="col we-right">
-              <img class="img-fluid" src="img/1.jpg" alt="">
+            <div class="col-lg-6 col-xl-6 col-12 col-md-12 col-sm-12 we-right">
+              <img class="img-fluid display-reverse-responsive" src="img/1.jpg" alt="">
             </div>
           </div>
         </div>
@@ -129,6 +130,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -147,6 +149,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -165,6 +168,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -183,6 +187,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -201,6 +206,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -219,6 +225,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -237,6 +244,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -255,6 +263,7 @@
                     </div>
                   </div>
                 </slide>
+
                 <slide>
                   <div class="we-profile-pic">
                     <img src="img/cris.jpg" class="img-fluid" alt="">
@@ -276,11 +285,53 @@
               </slider>
             </div>
           </div>
-
-
-
         </div>
       </div>
+    </section>
+
+    <section class="coop-section">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-6 col-xl-6 col-12 col-md-12 col-sm-12 we-left">
+            <div class="encabezado">
+              <h2>¿quién confía en la tripulación?</h2>
+              <p>Estas son los equipos con los que hemos trabajado</p>
+              <hr>
+            </div>
+            <img class="img-fluid display-responsive" src="img/1.jpg" alt="">
+            <div class="we-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidi ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-xl-6 col-12 col-md-12 col-sm-12 we-right">
+            <div class="row">
+              <div class="col text-center">
+                <i class="fab fa-angrycreative"></i>
+              </div>
+              <div class="col text-center">
+                <i class="fab fa-angrycreative"></i>
+              </div>
+              <div class="col text-center">
+                <i class="fab fa-angrycreative"></i>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col text-center">
+                <i class="fab fa-angrycreative"></i>
+              </div>
+              <div class="col text-center">
+                <i class="fab fa-angrycreative"></i>
+              </div>
+              <div class="col text-center">
+                <i class="fab fa-angrycreative"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="work-section">
 
     </section>
 
